initial support for RxJava and Guava instead of Java 8 streams